--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -263,7 +263,7 @@ color: #000;
 							  <div class="row">
 								<div class="col-lg-12 col-md-12">
 								  <div class="mediaProductionDescriptuion">
-									<h1>Description</h1>
+									<h1>Delivary and hipping and pickup is avilabel</h1>
 								  </div>
 								</div>
 								
