--- a/templates/custom.html
+++ b/templates/custom.html
@@ -2666,7 +2666,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12">
               <div class="mediaProductionDescriptuion">
-              <h1>Description</h1>
+                <h1>Delivary and hipping and pickup is avilabel</h1>
               </div>
             </div>
             
